--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -164,36 +164,58 @@ jobs:
 
           **Installation:** To manually install this release, please use the following manifest URL: ${{ env.RELEASE_INSTALL_URL }}
 
-    # Printing Github Action variables
-    - name: Dump GitHub context
-      env:
-        GITHUB_CONTEXT: ${{ toJson(github) }}
-      run: echo "$GITHUB_CONTEXT"
-    - name: Dump job context
-      env:
-        JOB_CONTEXT: ${{ toJson(job) }}
-      run: echo "$JOB_CONTEXT"
-    - name: Dump steps context
-      env:
-        STEPS_CONTEXT: ${{ toJson(steps) }}
-      run: echo "$STEPS_CONTEXT"
-    - name: Dump runner context
-      env:
-        RUNNER_CONTEXT: ${{ toJson(runner) }}
-      run: echo "$RUNNER_CONTEXT"
-    - name: Dump strategy context
-      env:
-        STRATEGY_CONTEXT: ${{ toJson(strategy) }}
-      run: echo "$STRATEGY_CONTEXT"
-    - name: Dump matrix context
-      env:
-        MATRIX_CONTEXT: ${{ toJson(matrix) }}
-      run: echo "$MATRIX_CONTEXT"
+    - name: Foundry Release API
+      uses: fjogeleit/http-request-action@v1
+      with:
+        url: 'https://api.foundryvtt.com/_api/packages/release_version'
+        method: 'POST'
+        customHeaders: '{"Content-Type": "application/json", "Authorization": "${{ secrets.FOUNDRY_API_TOKEN }}"}'
+        data: 
+            '{
+                "id": "${{ env.PACKAGE_ID }}",
+                "dry_run": false,
+                "release": {
+                    "version": "${{ steps.manifest.outputs.version }}",
+                    "manifest": "${{ env.RELEASE_INSTALL_URL }}",
+                    "notes": "${{ steps.create_version_release.outputs.html_url }}",
+                    "compatibility": {
+                        "minimum": "${{ steps.manifest.outputs.compatibility.minimum }}",
+                        "verified": "${{ steps.manifest.outputs.compatibility.verified }}",
+                        "maximum": ""
+                    }
+                }
+            }'
 
-    - name: Show default environment variables
-      run: |
-        echo "The job_id is: $GITHUB_JOB"   # reference the default environment variables
-        echo "The id of this action is: $GITHUB_ACTION"   # reference the default environment variables
-        echo "The run id is: $GITHUB_RUN_ID"
-        echo "The GitHub Actor's username is: $GITHUB_ACTOR"
-        echo "GitHub SHA: $GITHUB_SHA"
+    # Printing Github Action variables
+    # - name: Dump GitHub context
+    #   env:
+    #     GITHUB_CONTEXT: ${{ toJson(github) }}
+    #   run: echo "$GITHUB_CONTEXT"
+    # - name: Dump job context
+    #   env:
+    #     JOB_CONTEXT: ${{ toJson(job) }}
+    #   run: echo "$JOB_CONTEXT"
+    # - name: Dump steps context
+    #   env:
+    #     STEPS_CONTEXT: ${{ toJson(steps) }}
+    #   run: echo "$STEPS_CONTEXT"
+    # - name: Dump runner context
+    #   env:
+    #     RUNNER_CONTEXT: ${{ toJson(runner) }}
+    #   run: echo "$RUNNER_CONTEXT"
+    # - name: Dump strategy context
+    #   env:
+    #     STRATEGY_CONTEXT: ${{ toJson(strategy) }}
+    #   run: echo "$STRATEGY_CONTEXT"
+    # - name: Dump matrix context
+    #   env:
+    #     MATRIX_CONTEXT: ${{ toJson(matrix) }}
+    #   run: echo "$MATRIX_CONTEXT"
+
+    # - name: Show default environment variables
+    #   run: |
+    #     echo "The job_id is: $GITHUB_JOB"   # reference the default environment variables
+    #     echo "The id of this action is: $GITHUB_ACTION"   # reference the default environment variables
+    #     echo "The run id is: $GITHUB_RUN_ID"
+    #     echo "The GitHub Actor's username is: $GITHUB_ACTOR"
+    #     echo "GitHub SHA: $GITHUB_SHA"
